src/components/grid/grid.less
.y-grid-wrapper{
  position: relative;
  border: 1px solid @border-color;
  border-bottom: 0;
  border-right: 0;
  margin-bottom: 10px;
  &.y-grid-noborder{
    margin-bottom: 0;
    border:none;
  }
  &.y-grid-separate{
    border: none;
    >.y-grid:before{
      height: 0;
    }
    >.y-grid:after{
      width: 0;
    }
  }
}
.y-grid{
  width: 100%;
  height: 100%;
  max-width: 100%;
  overflow: auto;
  color: #495060;
  font-size: @f-size-base;
  background-color: #fff;
  box-sizing: border-box;
  &.y-grid-border th, &.y-grid-border td{
    border-right: 1px solid @border-color;
  }
  .y-grid-fixed{
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    box-shadow: 2px 0 6px -2px rgba(0, 0, 0, 0.2);
    .y-grid-fixed-body{
      overflow: hidden;
      position: relative;
    }
  }
  .y-grid-fixed-right{
    overflow: hidden;
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
    box-shadow: -2px 0 6px -2px rgba(0, 0, 0, 0.2);
    .y-grid-fixed-body{
      overflow: hidden;
      position: relative;
    }
  }
  .y-grid-operation{
    cursor: pointer;
    color: @f-color-primary;
    margin-right: 10px;
    -webkit-user-select:none;
    -moz-user-select:none;
    -ms-user-select:none;
    user-select:none;
    font-size: @f-size-xs;
    padding-right: 10px;
    border-right: solid 1px #d8d8d8;
  }
  .y-grid-operation-more{
    position: absolute;
    display: none;
    margin-left: -20px;
    background: @bg-color;
    padding: 3px 0;
    z-index: 1;
    border-radius: 2px;
    box-shadow:0 0 5px 0 rgba(0,0,0,0.20);
    li{
      padding: 3px 20px;
      cursor: pointer;
      background: @bg-color;
      &:hover{
        background: #fff;
      }
    }
  }
  .y-grid-operation-morectn {
    .fa{
      position: relative;
      right: 10px;
      top: -3px;
      color: @f-color-primary;
      transition: all .2s ease-in-out;
    }
    .y-grid-operation{
      border-right: none;
      padding-right: 0;
    }
    &:hover {
      .y-grid-operation-more{
        display: block;
      }
      .fa{
        top: 2px;
        transform: rotate(-180deg);
      }
    }
  }
  .y-cell .y-grid-operation:last-child{
    border-right: none;
  }
  &:after, &:before {
    content: "";
    position: absolute;
    background-color: @border-color;
  }
  &:before{
    width: 100%;
    height: 1px;
    left: 0;
    bottom: 0;
    z-index: 1;
  }
  &:after {
    width: 1px;
    height: 100%;
    top: 0;
    right: 0;
    z-index: 3;
  }
  table{
    table-layout: fixed;
    width: 100%;
    tbody {
      tr.y-grid-row-hover td, tr.y-grid-row-selected td{
        background-color: #eff6fc !important;
      }
      .y-grid-checkbox{
        position: relative;
        top: 2px;
        transition: opacity .2s ease-in-out;;
      }
    }
    th{
      height: 40px;
      white-space: nowrap;
      overflow: hidden;
      background-color: #f5f5f5;
      font-weight: normal;
    }
    td{
      background-color: #fff;
      transition: background-color .2s ease-in-out;
    }
    th,td{
      min-width: 0;
      height: 44px;
      box-sizing: border-box;
      text-align: left;
      text-overflow: ellipsis;
      vertical-align: middle;
      color: @f-color-dark;
      border-bottom: 1px solid @border-color;
    }
    .y-cell{
      padding-left: 10px;
      padding-right: 10px;
      line-height: 16px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: normal;
      word-break: break-all;
      box-sizing: border-box;
      &.y-cell-checkbox{
        text-overflow: clip;
      }
    }
    .y-grid-head .y-cell{
      line-height: 16px;
    }
    .y-cell-overflow-auto{
      overflow: visible;
    }
  }
}
.y-grid-stripe .y-grid-body tr:nth-child(2n) td{
  background-color: #f8f8f9;
}
.y-grid-stripe .y-grid-body tr td tr:nth-child(2n + 1) td{
  background-color: #fff;
}
.y-grid-stripe .y-grid-body tr td tr:nth-child(2n) td{
  background-color: #f8f8f9;
}
.y-grid-empty{
  display: none;
  td{
    border-bottom:none !important;
    text-align: center !important;
  }
}
.y-grid-body .y-table-separate{
  border-collapse:separate;
  border-spacing:0px 5px;
  > tbody > tr:nth-child(2n + 1) > td {
    border-top: solid 1px #eee;
  }
  > tbody > tr:nth-child(2n + 1) > td:first-child{
    border-left: solid 1px #eee;
  }
  > tbody > tr:nth-child(2n + 1) > td:last-child{
    border-right: solid 1px #eee;
  }
}
.y-grid-body table tbody:not(.y-grid-empty):empty+.y-grid-empty {
  display: table-row-group;
}
.y-grid-body-verticaltop tr td{
  vertical-align: top;
}
.y-grid-head-lock{
  position: absolute;
  z-index: 1;
  top: 0;
  overflow: hidden;
}
.y-cell-sortable{
  cursor: pointer;
  .fa {
    color: @f-color-light;
  }
}
.y-sort-asc .fa-sort-asc {
  color: @f-color-dark
}
.y-sort-desc .fa-sort-desc {
  color: @f-color-dark
}
.y-grid-body-lock{
  /* margin-top: 45px;*/
}
.y-cell-summary{
  border: solid 1px #e5e6e7;
  position: relative;
  top: 5px;min-height: 44px;
  background-color: #f5f5f5;
  padding: 5px 10px;
  overflow: inherit !important;
}
.y-grid-summary > table > tbody > tr > td {
  &:first-child{
    border-left: solid 1px #e5e6e7;
  }
  &:last-child{
    border-right: solid 1px #e5e6e7;
  }
}
@keyframes yloading {
  0% {opacity: 0;}
  100% {opacity: 1;}
}
.y-loading-letter-ctn{
  text-align: center;
  height: 100%;
  position: absolute;
  width: 100%;
  top: 0;
  padding-top: 20%;
  line-height: 100%;
  color: #333;
  background-color: rgba(0,0,0,.1);
}
.y-loading-letter {
  font-size: 14px;
  animation-name: yloading;
  animation-duration: 1.6s;
  animation-iteration-count: infinite;
  letter-spacing: -1px;
}
.l-1 {animation-delay: .48s;}
.l-2 {animation-delay: .6s;}
.l-3 {animation-delay: .72s;}
.l-4 {animation-delay: .84s;}
.l-5 {animation-delay: .96s;}
.l-6 {animation-delay: 1.08s;}
.l-7 {animation-delay: 1.2s;}
.l-8 {animation-delay: 1.32s;}
.l-9 {animation-delay: 1.44s;}
.l-10 {animation-delay: 1.56s;}
.y-grid table{
  border: 0 solid #ccc;
}

